fixet spacing
undtaget footer med media-quaries, hvor det stadig er lidt bøvlet

--- a/styles.css
+++ b/styles.css
@@ -79,11 +79,11 @@ a {
 }
 
 .sektion__titel {
-  padding: 0px 0px 60px 0px;
+  padding-bottom: var(--ldesktop);
 }
 
 .sektion__tekst {
-  padding: 0px 0px 30px 0px;
+  padding-bottom: var(--mdesktop);
 }
 
 .button__cta--1 {
@@ -145,6 +145,7 @@ a {
   background: var(--Fablab-orange, #e55807);
   color: var(--glass_hvid);
   max-height: 90px;
+  font-size: 26px;
 }
 
 .drop__down--button2 {
@@ -163,6 +164,7 @@ a {
   background: var(--Fablab-orange, #e55807);
   color: var(--glass_hvid);
   max-height: 90px;
+  font-size: 26px;
 }
 
 .pil__left {
@@ -228,7 +230,7 @@ header {
 
 .nav__menudesk--liste {
   display: flex;
-  gap: 20px;
+  gap: var(--sdesktop);
 }
 
 .nav__menudesk--liste a {
@@ -291,7 +293,10 @@ header {
   flex-direction: column;
   justify-content: space-around;
   background-color: var(--glass_hvid);
-  padding: 30px 60px;
+  padding-top: var(--mdesktop);
+  padding-bottom: var(--mdesktop);
+  padding-right:  var(--ldesktop);
+  padding-left: var(--ldesktop);
   border-radius: 6px;
   max-width: 800px;
 }
@@ -308,12 +313,20 @@ header {
   width: 100%;
 }
 
+.projekter__text--header {
+  padding-bottom: var(--sdesktop);
+}
+
+.projekter__text--bread {
+  padding-bottom: var(--sdesktop);
+}
+
 .projekter__container--slideshow {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-
+  padding-bottom: var(--ldesktop);
 }
 
 .projekter__text--container {
@@ -322,7 +335,6 @@ header {
   justify-content: center;
   padding: 0px 60px 0px 0px;
   max-width: 50%;
-
 }
 
 .projekter__billed--ramme {
@@ -342,9 +354,7 @@ header {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 60px 0px 0px 0px;
 }
-
 
 .maskiner__sektion {
   padding: var(--ldesktop_sektion);
@@ -610,7 +620,7 @@ header {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 0px 60px 0px 0px;
+  padding-right: var(--ldesktop);
   gap: var(--sdesktop);
 }
 
@@ -620,9 +630,17 @@ header {
   gap: var(--sdesktop);
 }
 
+.kontakt__billede {
+  padding-bottom: var(--sdesktop);
+}
+
 .kontakt__oplysninger {
   display: flex;
   flex-direction: column;
+}
+
+#kontakt__billede--oplysninger {
+  padding-bottom: var(--sdesktop);
 }
 
 .kontakt__billede img {
@@ -636,7 +654,14 @@ header {
 
 .kontakt__links--holder {
   display: flex;
-  gap: 16px;
+  gap: 10px;
+}
+
+.kontakt__links--holder img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
 }
 
 .kontakt__links--holder p {
@@ -660,14 +685,15 @@ header {
 .faq__container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 .faq__holder {
   width: 100%;
+  padding-bottom: 16px;
 }
 
 .faq__content {
   display: none;
+  padding-top: 16px;
 }
 
 .faq__content.active {
@@ -700,10 +726,22 @@ header {
   flex-direction: column;
 }
 
+#footer__kontakt--info {
+  padding-bottom: var(--sdesktop);
+}
+
+.footer__kontakt--billede {
+  padding-bottom: var(--sdesktop);
+}
+
 .some__ikon--container {
   display: flex;
   flex-direction: row;
   gap: 30px;
+}
+
+.some__ikon img{
+  height: 60px;
 }
 
 @media screen and (max-width: 884px) {
@@ -796,8 +834,11 @@ header {
     height: 100%;
   }
 
+  .kontakt__formular {
+    padding-bottom: var(--mdesktop);
+  }
+
   .kontakt__billede img {
-    padding: 30px 0px 0px 0px;
     max-width: 100%;
   }
 
@@ -809,7 +850,8 @@ header {
   .footer {
     display: flex;
     flex-direction: column;
-    padding: 100px 100px 100px 100px;
+    align-items: center;
+    padding: 100px 50px 100px 50px;
     color: var(--glass_hvid);
     background-color: var(--ucl);
   }
@@ -817,7 +859,6 @@ header {
   .footer__container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     gap: var(--mdesktop);
   }
 
@@ -828,5 +869,10 @@ header {
   .footer__info--container {
     display: flex;
     flex-direction: column;
+  }
+
+  .footer__bottom--tekst {
+    display: flex;
+    flex-direction: row;
   }
 }
